--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -2,4 +2,7 @@
 <resources>
     <string name="hello">Hello World, HelloAndroid!</string>
     <string name="app_name">Shooterland</string>
+<string name="menu_achievements">Achievements</string>
+<string name="menu_pause">Pause</string>
+<string name="menu_help">Help</string>
 </resources>
