--- a/wiki/TheWhiteBoard.wiki
+++ b/wiki/TheWhiteBoard.wiki
@@ -13,6 +13,7 @@
 === Graphics To Do ===
  * World Map
  * Buttons
+ * Change the original shooterland world backgrounds to be in the new layout.
 
 === Other ===
  * Convert all the levels
